# api/models/v1/order.go
@@ -1,0 +1,5 @@
+package models_v1
+
+type CreateOrder struct {
+	PaymentType string `json:"payment_type" binding:"required"`
+}
